--- a/tradely/src/Styles/news.css
+++ b/tradely/src/Styles/news.css
@@ -18,6 +18,11 @@
   position: relative;
 }
 
+.news-article-link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .news-article {
   background-color: white;
   border-radius: 10px;
@@ -25,7 +30,15 @@
   margin: 0 10px;
   overflow: hidden;
   width: 300px;
+  height: auto; /* Adjust height */
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.2s;
+}
+
+.news-article:hover {
+  transform: scale(1.05);
 }
 
 .news-article img {
@@ -36,24 +49,31 @@
 
 .news-content {
   padding: 10px; /* Reduced padding */
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .news-content h3 {
-  margin: 0 0 5px; /* Reduced margin */
+  margin: 0;
   font-size: 16px; /* Reduced font size */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.news-content p {
-  margin: 0 0 5px; /* Reduced margin */
-  font-size: 12px; /* Reduced font size */
+.news-content .summary {
+  margin: 5px 0;
+  font-size: 14px;
   color: #555;
-  display: none;
 }
 
 .news-content a {
   color: #007bff;
   text-decoration: none;
   font-size: 12px; /* Reduced font size */
+  margin-top: 10px;
 }
 
 .news-content a:hover {
@@ -67,8 +87,13 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
-  transform: translateY(-10%);
+  transform: translateY(-50%);
   color: #fff;
+  transition: transform 0.2s ease-in-out; /* Add transition for smooth scaling */
+}
+
+.arrow:hover {
+  transform: translateY(-50%) scale(1.2); /* Enlarge arrow on hover */
 }
 
 .arrow.left {
@@ -96,4 +121,34 @@
 
 .dot.active {
   background-color: #007bff;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .news-container {
+    flex-direction: column;
+  }
+
+  .news-article {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .arrow {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .news {
+    padding: 10px;
+  }
+
+  .news h2 {
+    font-size: 18px;
+  }
+
+  .news-content h3 {
+    font-size: 14px;
+  }
 }
