--- a/tradely/src/Styles/header.css
+++ b/tradely/src/Styles/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #282c34;
+  background: linear-gradient(145deg, #1e1e2f, #2a2a3d);
     padding: 20px;
     color: white;
     display: flex;
