--- a/tradely/src/Styles/liveMarketPrices.css
+++ b/tradely/src/Styles/liveMarketPrices.css
@@ -13,7 +13,7 @@
   margin-bottom: 20px;
   font-size: 24px;
   font-weight: bold;
-  color: #00d1ff;
+  color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -40,7 +40,7 @@
   margin: 0;
   font-size: 1.4em;
   font-weight: bold;
-  color: #00d1ff;
+  color: #0378fd;
 }
 
 .price-info {
