--- a/tradely/src/Styles/chartSection.css
+++ b/tradely/src/Styles/chartSection.css
@@ -35,6 +35,7 @@
   font-weight: 700;
   background: linear-gradient(45deg, #00D1FF, #007BFF);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 25px;
   position: relative;
