--- a/tradely/src/Styles/liveMarketPrices.css
+++ b/tradely/src/Styles/liveMarketPrices.css
@@ -61,11 +61,11 @@
 }
 
 .price-change.positive {
-  color: #28a745; /* Green for positive change */
+  color: #28a745; 
 }
 
 .price-change.negative {
-  color: #dc3545; /* Red for negative change */
+  color: #dc3545; 
 }
 
 .arrow {
@@ -74,9 +74,9 @@
 }
 
 .arrow.up {
-  color: #28a745; /* Green arrow for positive change */
+  color: #28a745; 
 }
 
 .arrow.down {
-  color: #dc3545; /* Red arrow for negative change */
+  color: #dc3545; 
 }
